[project]
name = "kittens"
description = ""
version = "0.1.0"
license = {text = "MIT License"}
requires-python = ">=3.12"
authors = [{name = "Magnus Bjuvensjö", email = "bjuvensjo@gmail.com"}]
readme = "README.md"
dependencies = [
    "kitty",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "rich",
    "ruff",
]
test = [
    "pytest",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -vvv"
testpaths = [
    "tests"    
]
pythonpath = "src"

[tool.ruff]
target-version = "py312"

# Set the maximum line length.
line-length = 160

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501", "U", "I"]
